2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release
        
2011-01-29  Brian Mattern

        Fix bug when you have an empty <Name></Name> in a menu